[package]
name = "imgui-vulkano-renderer"
version = "0.7.0"
authors = ["Sam Blazes"]
edition = "2018"

repository = "https://github.com/Tenebryo/imgui-vulkano-renderer"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
description = "A renderer for imgui-rs using Vulkano"
categories = ["gui", "rendering"]
keywords = ["vulkano", "imgui", "graphics", "gui", "rendering"]

[dependencies]
vulkano = "0.22.0"
vulkano-shaders = "0.22.0"
imgui = "0.7.0"
